# e8bit_emulator

./: Cargo.toml  README.md  a.e8  example.e8  example2.e8  example3.e8  example5.e8  example6.e8
examples/: example.e8  example4.e8  example7.e8  example8.e8  game.e8  game2.e8
src/: main.rs
src/modules/: mod.rs  parser.rs  utils.rs  vm.rs
