[package]
name = "e8bit_emulator"
version = "0.3.4"
edition = "2024"
description = "8-bit emulator written in Rust."
keywords = ["emulator", "8-bit", "rust"]
license-file = "LICENSE"
categories = ["emulators"]
readme = "README.md"
repository = "https://github.com/mi66mc/e8bit_emulator"

[dependencies]
crossterm = "0.29.0"
